# MyWork

./: outputTest.txt  test.huf  test.txt
algorismWork/: FindExit.cpp
algorismWork/1/: waterChangeRiver.cpp
algorismWork/2/: buyAndSale.cpp  findMale.cpp  findQuantity.cpp
algorismWork/divideAndSolve/: buyAndSale.cpp
algorismWork/graphResearch/: clearStar.cpp
lisanWork/: BibaoAnswer.cpp  ouLaTu.cpp
work1/: monkeyKing.cpp  operation.cpp  user.md
work2/: Nqueen.cpp  build.bat  calculator.cpp  calculator_gui.cpp
work3/: compress.cpp  compressor_huffman.cpp
work3/huffman_compressor/: CMakeLists.txt  FileCompressor.cpp  FileCompressor.h  HuffmanTree.cpp  HuffmanTree.h  Makefile  README.md  build.bat  input.huff  main.cpp  output.txt
